# timelapse

./: README.md  environment.yaml  pyproject.toml
timelapse/: cameras.py  config.py  dummy.py  launcher.py  model.py  opencv.py  recorder.py
timelapse/ui/: application.py  cam_picker.py  capturer.py  configurer.py  interval_picker.py  main_window.py  path_selector.py  sound.py
timelapse/ui/resources/: __init__.py
